# rosettasciio

./: .buildinfo  .codespellignore  .coverage  .drone.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  api.html  azure-pipelines.yml  changes.html  conda_environment.yml  conda_environment_dev.yml  contributing.html  genindex.html  index.html  interoperability.html  interoperatibility.html  objects.inv  prepare_release.py  py-modindex.html  pyproject.toml  releasing_guide.md  search.html  searchindex.js  setup.py  tutorial.py  update_registry.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  build.yml  codeql.yml  docs.yml  integration_tests.yml  package_and_test.yml  release.yml  tests.yml  tests_hs-extension.yml
_sources/: index.rst.txt
_sources/api/: index.rst.txt  rsciio.utils.rst.txt  utils.rst.txt
_sources/supported_formats/: dens.rst.txt  digitalsurf.rst.txt  edax.rst.txt  empad.rst.txt  hamamatsu.rst.txt  hspy.rst.txt  index.rst.txt  jobin_yvon.rst.txt  netcdf.rst.txt  nexus.rst.txt  panta_rhei.rst.txt  protochips.rst.txt  renishaw.rst.txt  ripple.rst.txt  supported_formats.rst.txt  topspin.rst.txt  zspy.rst.txt
_sources/user_guide/: install.rst.txt  lazy.rst.txt
_static/: copybutton.js
api/: index.html  rsciio.exceptions.html  rsciio.html  rsciio.tests.html  rsciio.utils.html  utils.html
benchmarks/: benchmark_ragged_array.ipynb
doc/: changes.rst  conf.py  contributing.rst  index.rst
doc/api/: exceptions.rst  index.rst  rsciio.exceptions.rst  rsciio.rst  rsciio.tests.rst  utils.rst
doc/file_specification/: index.rst  ripple-specs.rst
doc/supported_formats/: arina.rst  blockfile.rst  bruker.rst  delmic.rst  digitalsurf.rst  edax.rst  emd.rst  hamamatsu.rst  hspy.rst  index.rst  mrc.rst  mrcz.rst  netcdf.rst  nexus.rst  numpy.rst  quadstar.rst  renishaw.rst  supported_formats.rst  supporting_your_file_format.rst  tia.rst  tiff.rst  tofwerk.rst  topspin.rst  usid.rst  zspy.rst
doc/user_guide/: index.rst  install.rst  lazy.rst
docs/: api.rst  conf.py  index.rst
docs/api/: utils.rst
docs/file_specification/: index.rst
docs/supported_formats/: blockfile.rst  bruker.rst  de.rst  digital_micrograph.rst  edax.rst  emd.rst  emi_ser.rst  empad.rst  hamamatsu.rst  hspy.rst  image.rst  index.rst  jobin_yvon.rst  jobinyvon.rst  mrc.rst  mrcz.rst  msa.rst  nexus.rst  pantarhei.rst  protochips.rst  quantumdetector.rst  renishaw.rst  ripple.rst  semper.rst  supported_formats.rst  tiff.rst  trivista.rst  tvips.rst  usid.rst  zspy.rst
docs/user_guide/: index.rst  install.rst
file_specification/: index.html  ripple-specs.html
rsciio/: README  __init__.py  _docstrings.py  _hierarchical.py  _io_plugins.py  _logger.py  _version.py  conftest.py  docstrings.py  exceptions.py
rsciio/arina/: __init__.py  _api.py  specifications.yaml
rsciio/blockfile/: __init__.py  _api.py  api.py  specifications.yaml
rsciio/bruker/: __init__.py  _api.py  _utils.py  api.py  specifications.yaml  unbcf_fast.pyx
rsciio/de/: _api.py  api.py  specifications.yaml
rsciio/delmic/: __init__.py  _api.py  specifications.yaml
rsciio/dens/: __init__.py  _api.py  api.py  specifications.yaml
rsciio/digital_micrograph/: _api.py  api.py  specifications.yaml
rsciio/digitalmicrograph/: _api.py  specifications.yaml
rsciio/digitalsurf/: Untitled-1.ipynb  __init__.py  _api.py  specifications.yaml
rsciio/dm5/: __init__.py  _api.py  specifications.yaml
rsciio/edax/: _api.py  api.py  specifications.yaml
rsciio/emd/: _api.py  _emd_ncem.py  _emd_velox.py  api.py  specifications.yaml
rsciio/empad/: _api.py  api.py  specifications.yaml
rsciio/fei/: _api.py  api.py  specifications.yaml
rsciio/hamamatsu/: _api.py  specifications.yaml
rsciio/hspy/: _api.py  api.py  specifications.yaml
rsciio/image/: _api.py  api.py  specifications.yaml
rsciio/impulse/: __init__.py  _api.py  api.py  specifications.yaml
rsciio/jeol/: _api.py  api.py  specifications.yaml
rsciio/jobin_yvon/: _api.py  api.py  specifications.yaml
rsciio/jobinyvon/: _api.py  specifications.yaml
rsciio/mrc/: _api.py  api.py  specifications.yaml
rsciio/mrcz/: _api.py  api.py  specifications.yaml
rsciio/msa/: __init__.py  _api.py  api.py  specifications.yaml
rsciio/nanomegas_app5/: __init__.py  _api.py  specifications.yaml
rsciio/netcdf/: _api.py  api.py  specifications.yaml
rsciio/nexus/: __init__.py  _api.py  api.py  specifications.yaml
rsciio/numpy/: _api.py  specifications.yaml
rsciio/pantarhei/: __init__.py  _api.py  (+3 more)
supported_formats/: arina.html  blockfile.html  bruker.html  de5.html  delmic.html  dens.html  digital_micrograph.html  digitalmicrograph.html  digitalsurf.html  edax.html  emd.html  emi_ser.html  empad.html  hamamatsu.html  hspy.html  image.html  index.html  jeol.html  jobin_yvon.html  jobinyvon.html  mrc.html  mrcz.html  msa.html  netcdf.html  nexus.html  numpy.html  panta_rhei.html  pantarhei.html  phenom.html  protochips.html  quadstar.html  quantumdetector.html  renishaw.html  ripple.html  semper.html  supported_formats.html  supporting_your_file_format.html  tia.html  tiff.html  tofwerk.html  (+5 more)
upcoming_changes/: 1.maintenance.rst  100.maintenance.rst  101.bugfix.rst  102.deprecation.rst  104.new.rst  106.maintenance.rst  109.maintenance.rst  11.new.rst  111.api.rst  123.maintenance.rst  125.maintenance.rst  126.maintenance.rst  129.maintenance.rst  13.maintenance.rst  131.bugfix.rst  132.maintenance.rst  138.enhancements.rst  139.new.rst  142.doc.rst  143.maintenance.rst  149.doc.rst  150.doc.rst  152.maintenance.rst  155.maintenance.rst  162.new.rst  164.bugfix.rst  164.maintenance.rst  169.bugfix.rst  170.enhancements.rst  173.bugfix.rst  174.new.rst  175.maintenance.rst  176.maintenance.rst  177.maintenance.rst  180.enhancements.rst  182.bugfix.rst  185.bugfix.rst  186.maintenance.rst  187.bugfix.rst  188.maintenance.rst  (+140 more)
user_guide/: index.html  install.html  interoperability.html  lazy.html
(+415 files in other folders)
