[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "rosettasciio"
description = "Reading and writing scientific file formats"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
dependencies = [
  "dask[array]>=2021.3.1",
  "python-dateutil",
  "numpy>=1.20.0",
  "pint>=0.8",
  "python-box>=6,<7",
  "pyyaml",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://hyperspy.org/rosettasciio"
"Bug Reports" = "https://github.com/hyperspy/rosettasciio/issues"
"Source" = "https://github.com/hyperspy/rosettasciio"

[project.license]
file = "COPYING.txt"

[project.optional-dependencies]
blockfile = ["scikit-image>=0.18"]
eds-stream = ["sparse"]
hdf5 = ["h5py>=2.3"]
# Remove pillow pinning when https://github.com/imageio/imageio/issues/1044 is fixed
image = ["imageio>=2.16", "pillow<10.1.0"]
mrcz = ["blosc>=1.5", "mrcz>=0.3.6"]
scalebar_export = ["matplotlib-scalebar", "matplotlib>=3.5"]
speed = ["numba>=0.52"]
tiff = ["tifffile>=2020.2.16", "imagecodecs>=2020.1.31"]
# Add sidpy dependency and pinning as workaround to fix pyUSID import
# Remove sidpy dependency once https://github.com/pycroscopy/pyUSID/issues/85 is fixed.
usid = ["pyUSID", "sidpy<=0.12.0"]
zspy = ["zarr"]
tests = [
  "pooch",
  "pytest>=3.6",
  "pytest-xdist",
  "pytest-rerunfailures",
  "pytest-cov",
  "setuptools_scm",
]
docs = [
  "numpydoc",
  "pooch",
  "pydata-sphinx-theme>=0.13",
  "setuptools_scm",
  "sphinx",
  "sphinx-favicon",
  "sphinxcontrib-towncrier",
  "towncrier",
]
all = [
  "rosettasciio[blockfile]",
  "rosettasciio[eds-stream]",
  "rosettasciio[hdf5]",
  "rosettasciio[mrcz]",
  "rosettasciio[scalebar_export]",
  "rosettasciio[speed]",
  "rosettasciio[tiff]",
  "rosettasciio[usid]",
  "rosettasciio[zspy]",
]
dev = [
  "black",
  "rosettasciio[docs]",
  "rosettasciio[all]",
  "rosettasciio[tests]"
]

[tool.pytest.ini_options]
# Note we may need to use `-n 2` argument for pytest-xdist on CI
# due to https://github.com/pytest-dev/pytest-xdist/issues/9.
#  "-ra",  # Display summary: "all except passes"
#  "--numprocesses auto --dist loadfile", # for pytest-xdist
addopts = "-ra --numprocesses auto --dist loadfile"
minversion = "6.0"
testpaths = [
  "rsciio/tests",
]

[tool.setuptools.packages.find]
where = ["."] # default
include = ["rsciio*"]
# Excluding rsciio.tests.data folder is done in MANIFEST.in
# because setuptools doesn't support it in pyproject.toml

[tool.setuptools.package-data]
"rsciio" = ["*test_compilers.c", "*.yaml", "*registry.txt"]

[tool.setuptools_scm]
# Presence enables setuptools_scm, the version will be determine at build time from git

[tool.towncrier]
package = "rsciio"
filename = "CHANGES.rst"
directory = "upcoming_changes/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/hyperspy/rosettasciio/issues/{issue}>`_"

  [[tool.towncrier.type]]
  directory = "new"
  name = "New features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "enhancements"
  name = "Enhancements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "api"
  name = "API changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "maintenance"
  name = "Maintenance"
  showcontent = true

[tool.coverage.run]
branch = true
source = ["rsciio"]
omit = [
  "rsciio/tests/*",
  "setup.py",
  "update_registry.py"
]

[tool.coverage.report]
precision = 2
